= 1.7.22 = * Fixed dimension and redraw issues on scrollbars
git-svn-id: https://plugins.svn.wordpress.org/crayon-syntax-highlighter/trunk@494502 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,9 @@ coloring etc.
 	display: inline;
 	float: left !important;
 	min-width: 20px;
-	
+
+	background-repeat: no-repeat;
+	background-position: center;
     height: 16px;
     line-height: 16px;
     margin: 2px 2px !important;
